# PhotoOrganizer

./: .gitignore  PhotoOrganizer.spec  README.md  config.toml.sample  main.py  pyproject.toml  requirements.txt
src/photo_organizer/: __init__.py  config.py  engine.py  fallback.py  logging_utils.py  main.py  metadata.py  models.py  video_thumbnail.py
src/photo_organizer/ui/: __init__.py  main_window.py
